--- a/index.html
+++ b/index.html
@@ -63,15 +63,11 @@
       <section class="popup popup_closed">
         <div class="popup__container">
           <button class="popup__close-button"></button>
-          <h2 class="popup__title">
-            Редактировать профиль
-          </h2>
-          <form action="" class="popup__form">
-            <input type="text" class="popup__form-field popup__form-field_data_name">
-            <input type="text" class="popup__form-field popup__form-field_data_status">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form class="popup__form">
+            <input type="text" placeholder="Имя" class="popup__form-field popup__form-field_data_name">
+            <input type="text" placeholder="О себе" class="popup__form-field popup__form-field_data_status">
             <input type="submit" value="Сохранить" class="popup__form-submit-button">
-
-
           </form>
         </div>
       </section>
@@ -83,7 +79,6 @@
     </footer>
 
   </div>
-
   <script src="./index.js"></script>
 </body>
 </html>
