--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <button class="popup__close-button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__form">
-            <input type="text" placeholder="Имя" class="popup__form-field popup__form-field_data_name">
-            <input type="text" placeholder="О себе" class="popup__form-field popup__form-field_data_status">
+            <input type="text" required placeholder="Имя" class="popup__form-field popup__form-field_data_name">
+            <input type="text" required placeholder="О себе" class="popup__form-field popup__form-field_data_status">
             <input type="submit" value="Сохранить" class="popup__form-submit-button">
           </form>
         </div>
