--- a/index.html
+++ b/index.html
@@ -29,32 +29,44 @@
 
       <ul class="gallery">
         <li class="gallery__item">
-          <img src="./images/photos/karachaevsk.jpg" alt="Карачаевск" class="gallery__photo">
+          <div class="gallery__square-photo-wrapper">
+            <img src="./images/photos/karachaevsk.jpg" alt="Карачаевск" class="gallery__photo">
+          </div>
           <h2 class="gallery__title">Карачаевск</h2>
           <button class="gallery__like-button"></button>
         </li>
         <li class="gallery__item">
-          <img src="./images/photos/elbrus.jpg" alt="Эльбрус" class="gallery__photo">
+          <div class="gallery__square-photo-wrapper">
+            <img src="./images/photos/elbrus.jpg" alt="Эльбрус" class="gallery__photo">
+          </div>
           <h2 class="gallery__title">Эльбрус</h2>
           <button class="gallery__like-button"></button>
         </li>
         <li class="gallery__item">
-          <img src="./images/photos/dombay.jpg" alt="Домбай" class="gallery__photo">
+          <div class="gallery__square-photo-wrapper">
+            <img src="./images/photos/dombay.jpg" alt="Домбай" class="gallery__photo">
+          </div>
           <h2 class="gallery__title">Домбай</h2>
           <button class="gallery__like-button"></button>
         </li>
         <li class="gallery__item">
-          <img src="./images/photos/kolomna.jpg" alt="Зимняя Коломна" class="gallery__photo">
+          <div class="gallery__square-photo-wrapper">
+            <img src="./images/photos/kolomna.jpg" alt="Зимняя Коломна" class="gallery__photo">
+          </div>
           <h2 class="gallery__title">Коломна</h2>
           <button class="gallery__like-button gallery__like-button_active"></button>
         </li>
         <li class="gallery__item">
-          <img src="./images/photos/tver-forest.jpg" alt="Тверской лес" class="gallery__photo">
+          <div class="gallery__square-photo-wrapper">
+            <img src="./images/photos/tver-forest.jpg" alt="Тверской лес" class="gallery__photo">
+          </div>
           <h2 class="gallery__title">Тверской лес</h2>
           <button class="gallery__like-button"></button>
         </li>
         <li class="gallery__item">
-          <img src="./images/photos/kremlin.jpg" alt="Собор в Московском Кремле" class="gallery__photo">
+          <div class="gallery__square-photo-wrapper">
+            <img src="./images/photos/kremlin.jpg" alt="Собор в Московском Кремле" class="gallery__photo">
+          </div>
           <h2 class="gallery__title">Московский Кремль</h2>
           <button class="gallery__like-button"></button>
         </li>
