--- a/index.html
+++ b/index.html
@@ -18,70 +18,60 @@
     <main class="main">
 
       <section class="profile">
-        <img src="./images/userpic.jpg" alt="" class="profile__userpic">
+        <img src="./images/userpic.jpg" alt="Аватарка" class="profile__userpic">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button"></button>
+          <button class="profile__edit-button" type="button"></button>
           <p class="profile__status">Исследователь океана</p>
         </div>
-        <button class="profile__add-button"></button>
+        <button class="profile__add-button" type="button"></button>
       </section>
 
-      <ul class="gallery">
-        <li class="gallery__item">
-          <div class="gallery__square-photo-wrapper">
-            <img src="./images/photos/karachaevsk.jpg" alt="Карачаевск" class="gallery__photo">
-          </div>
-          <h2 class="gallery__title">Карачаевск</h2>
-          <button class="gallery__like-button"></button>
-        </li>
-        <li class="gallery__item">
-          <div class="gallery__square-photo-wrapper">
-            <img src="./images/photos/elbrus.jpg" alt="Эльбрус" class="gallery__photo">
-          </div>
-          <h2 class="gallery__title">Эльбрус</h2>
-          <button class="gallery__like-button"></button>
-        </li>
-        <li class="gallery__item">
-          <div class="gallery__square-photo-wrapper">
-            <img src="./images/photos/dombay.jpg" alt="Домбай" class="gallery__photo">
-          </div>
-          <h2 class="gallery__title">Домбай</h2>
-          <button class="gallery__like-button"></button>
-        </li>
-        <li class="gallery__item">
-          <div class="gallery__square-photo-wrapper">
-            <img src="./images/photos/kolomna.jpg" alt="Зимняя Коломна" class="gallery__photo">
-          </div>
-          <h2 class="gallery__title">Коломна</h2>
-          <button class="gallery__like-button gallery__like-button_active"></button>
-        </li>
-        <li class="gallery__item">
-          <div class="gallery__square-photo-wrapper">
-            <img src="./images/photos/tver-forest.jpg" alt="Тверской лес" class="gallery__photo">
-          </div>
-          <h2 class="gallery__title">Тверской лес</h2>
-          <button class="gallery__like-button"></button>
-        </li>
-        <li class="gallery__item">
-          <div class="gallery__square-photo-wrapper">
-            <img src="./images/photos/kremlin.jpg" alt="Собор в Московском Кремле" class="gallery__photo">
-          </div>
-          <h2 class="gallery__title">Московский Кремль</h2>
-          <button class="gallery__like-button"></button>
-        </li>
-      </ul>
-
-      <section class="popup popup_closed">
-        <div class="popup__container">
-          <button class="popup__close-button"></button>
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="popup__form">
-            <input type="text" required placeholder="Имя" class="popup__form-field popup__form-field_data_name">
-            <input type="text" required placeholder="О себе" class="popup__form-field popup__form-field_data_status">
-            <input type="submit" value="Сохранить" class="popup__form-submit-button">
-          </form>
-        </div>
+      <section>
+        <ul class="gallery">
+          <li class="gallery__item">
+            <div class="gallery__square-photo-wrapper">
+              <img src="./images/photos/karachaevsk.jpg" alt="Карачаевск" class="gallery__photo">
+            </div>
+            <h2 class="gallery__title">Карачаевск</h2>
+            <button class="gallery__like-button" type="button"></button>
+          </li>
+          <li class="gallery__item">
+            <div class="gallery__square-photo-wrapper">
+              <img src="./images/photos/elbrus.jpg" alt="Эльбрус" class="gallery__photo">
+            </div>
+            <h2 class="gallery__title">Эльбрус</h2>
+            <button class="gallery__like-button" type="button"></button>
+          </li>
+          <li class="gallery__item">
+            <div class="gallery__square-photo-wrapper">
+              <img src="./images/photos/dombay.jpg" alt="Домбай" class="gallery__photo">
+            </div>
+            <h2 class="gallery__title">Домбай</h2>
+            <button class="gallery__like-button" type="button"></button>
+          </li>
+          <li class="gallery__item">
+            <div class="gallery__square-photo-wrapper">
+              <img src="./images/photos/kolomna.jpg" alt="Зимняя Коломна" class="gallery__photo">
+            </div>
+            <h2 class="gallery__title">Коломна</h2>
+            <button class="gallery__like-button gallery__like-button_active" type="button"></button>
+          </li>
+          <li class="gallery__item">
+            <div class="gallery__square-photo-wrapper">
+              <img src="./images/photos/tver-forest.jpg" alt="Тверской лес" class="gallery__photo">
+            </div>
+            <h2 class="gallery__title">Тверской лес</h2>
+            <button class="gallery__like-button" type="button"></button>
+          </li>
+          <li class="gallery__item">
+            <div class="gallery__square-photo-wrapper">
+              <img src="./images/photos/kremlin.jpg" alt="Собор в Московском Кремле" class="gallery__photo">
+            </div>
+            <h2 class="gallery__title">Московский Кремль</h2>
+            <button class="gallery__like-button" type="button"></button>
+          </li>
+        </ul>
       </section>
 
     </main>
@@ -89,6 +79,18 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
+
+    <section class="popup popup_closed">
+      <div class="popup__container">
+        <button class="popup__close-button" type="button"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form name="userinfo" class="popup__form">
+          <input type="text" required placeholder="Имя" class="popup__form-field popup__form-field_data_name">
+          <input type="text" required placeholder="О себе" class="popup__form-field popup__form-field_data_status">
+          <button type="submit" class="popup__form-submit-button">Сохранить</button>
+        </form>
+      </div>
+    </section>
 
   </div>
   <script src="./index.js"></script>
