--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="userinfo" class="popup__form">
-          <input type="text" required placeholder="Имя" class="popup__form-field popup__form-field_data_name">
-          <input type="text" required placeholder="О себе" class="popup__form-field popup__form-field_data_status">
+        <form name="form-userinfo" class="popup__form">
+          <input name="userinfo-name" type="text" required placeholder="Имя" class="popup__form-field popup__form-field_data_name">
+          <input name="userinfo-status" type="text" required placeholder="О себе" class="popup__form-field popup__form-field_data_status">
           <button type="submit" class="popup__form-submit-button">Сохранить</button>
         </form>
       </div>
     </section>
 
   </div>
-  <script src="./index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
