feat: Создавать карточки первоначально из js массива

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
       <section>
         <ul class="gallery">
+          <!--
           <li class="gallery__item">
             <div class="gallery__square-photo-wrapper">
               <img src="./images/photos/karachaevsk.jpg" alt="Карачаевск" class="gallery__photo">
@@ -71,6 +72,7 @@
             <h2 class="gallery__title">Московский Кремль</h2>
             <button class="gallery__like-button" type="button"></button>
           </li>
+          -->
         </ul>
       </section>
 
@@ -93,6 +95,15 @@
     </section>
 
   </div>
+  <template id="card">
+    <li class="gallery__item">
+      <div class="gallery__square-photo-wrapper">
+        <img src="" alt="" class="gallery__photo">
+      </div>
+      <h2 class="gallery__title"></h2>
+      <button class="gallery__like-button" type="button"></button>
+    </li>
+  </template>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
