feat: сделать удаления карточек по кнопке с корзиной

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <li class="gallery__item">
       <div class="gallery__square-photo-wrapper">
         <img src="" alt="" class="gallery__photo">
+        <button class="gallery__remove-button" type="button"></button>
       </div>
       <h2 class="gallery__title"></h2>
       <button class="gallery__like-button" type="button"></button>
