feat: сделать открытие фотки в попапе

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
       </div>
     </section>
 
+    <section class="popup popup_closed popup_data_big-photo">
+      <div class="popup__container popup__container_data_big-photo">
+        <button class="popup__close-button popup__close-button_data_big-image" type="button"></button>
+        <img class="popup__big-image-photo"src="./images/photos/dombay.jpg" alt="Добмай">
+        <p class="popup__big-image-title">Добмай</p>
+      </div>
+    </section>
+
   </div>
   <template id="card">
     <li class="gallery__item">
