--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
       <div class="popup__container">
         <button class="popup__close-button popup__close-button_data_userinfo" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="form-userinfo" class="popup__form popup__form_data_userinfo">
-          <input name="userinfo-name" type="text" required placeholder="Имя" class="popup__form-field popup__form-field_data_name">
-          <input name="userinfo-status" type="text" required placeholder="О себе" class="popup__form-field popup__form-field_data_status">
+        <form name="form-userinfo" class="popup__form popup__form_data_userinfo" novalidate>
+          <input id="name" name="userinfo-name" type="text" required placeholder="Имя" minlength="2" maxlength="40" class="popup__form-field popup__form-field_data_name">
+          <span class="popup__form-warning popup__form-warning_field_name">Вы пропустили это поле.</span>
+          <input id="status" name="userinfo-status" type="text" required placeholder="О себе" minlength="2" maxlength="200" class="popup__form-field popup__form-field_data_status">
+          <span class="popup__form-warning popup__form-warning_field_status">Вы пропустили это поле.</span>
           <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_userinfo">Сохранить</button>
         </form>
       </div>
@@ -61,9 +63,11 @@
       <div class="popup__container">
         <button class="popup__close-button popup__close-button_data_addcard" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form name="form-addcard" class="popup__form popup__form_data_addcard">
-          <input name="addcard-card-title" type="text" required placeholder="Название" class="popup__form-field popup__form-field_data_card-title">
-          <input name="addcard-card-image" type="url" required placeholder="Ссылка на картинку" class="popup__form-field popup__form-field_data_card-image">
+        <form name="form-addcard" class="popup__form popup__form_data_addcard" novalidate>
+          <input id="title" name="addcard-card-title" type="text" required placeholder="Название" minlength="2" maxlength="30" class="popup__form-field popup__form-field_data_card-title">
+          <span class="popup__form-warning popup__form-warning_field_title">Вы пропустили это поле.</span>
+          <input id="link" name="addcard-card-image" type="url" required placeholder="Ссылка на картинку" class="popup__form-field popup__form-field_data_card-image">
+          <span class="popup__form-warning popup__form-warning_field_link">Вы пропустили это поле.</span>
           <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_addcard">Сохранить</button>
         </form>
       </div>
