--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
   <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
+  <script src="./scripts/validate.js"></script>
 
 </body>
 </html>
