--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button class="profile__add-button" type="button"></button>
       </section>
 
-      <section>
+      <section class="cards">
         <ul class="gallery">
         </ul>
       </section>
