--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./pages/index.css">
   <link rel="icon" href="./favicon.ico">
   <title>Сервис «Место»</title>
   <meta name="description" content="Сайт с фотографиями разных мест от разных людей">
@@ -19,13 +18,13 @@
   <div class="page">
 
     <header class="header">
-      <img class="header__logo" src="./images/mesto-logo.svg" alt="Логотип сервиса Mesto" >
+      <img class="header__logo" src="<%=require('./images/mesto-logo.svg')%>" alt="Логотип сервиса Mesto" >
     </header>
 
     <main class="main">
 
       <section class="profile">
-        <img src="./images/userpic.jpg" alt="Аватарка" class="profile__userpic">
+        <img src="<%=require('./images/userpic.jpg')%>" alt="Аватарка" class="profile__userpic">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
@@ -76,7 +75,7 @@
     <div class="popup popup_photo">
       <div class="popup__container popup__container_photo">
         <button class="popup__close-button popup__close-button_data_big-image" type="button"></button>
-        <img class="popup__big-image-photo" src="./images/photos/elbrus.jpg" alt="Эльбрус">
+        <img class="popup__big-image-photo" src="<%=require('./images/photos/elbrus.jpg')%>" alt="Эльбрус">
         <p class="popup__big-image-title">Эльбрус</p>
       </div>
     </div>
@@ -86,7 +85,7 @@
   <template id="card">
     <li class="gallery__item">
       <div class="gallery__square-photo-wrapper">
-        <img src="./images/photos/elbrus.jpg" alt="Эльбрус" class="gallery__photo">
+        <img src="<%=require('./images/photos/elbrus.jpg')%>" alt="Эльбрус" class="gallery__photo">
         <button class="gallery__remove-button" type="button"></button>
       </div>
       <h2 class="gallery__title"></h2>
@@ -94,7 +93,6 @@
     </li>
   </template>
 
-  <script type="module" src="./scripts/index.js"></script>
 
 </body>
 </html>
