feature: Popup and PopupWithImages classes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="<%=require('./favicon.ico')%>">
   <title>Сервис «Место»</title>
   <meta name="description" content="Сайт с фотографиями разных мест от разных людей">
   <!-- Добавил в html стиль, чтобы при первоначальной загрузке страницы не «мигали» заготовки попапов -->
