--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,10 @@
     <main class="main">
 
       <section class="profile">
-        <img src="./images/userpic.jpg" alt="Аватарка" class="profile__userpic">
+        <div class="profile__avatar">
+          <button class="profile__editpic"></button>
+          <img class="profile__userpic" src="./images/userpic.jpg" alt="Аватарка" class="">
+        </div>
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
@@ -58,6 +61,18 @@
       </div>
     </div>
 
+    <div class="popup popup_useravatar">
+      <div class="popup__container">
+        <button class="popup__close-button popup__close-button_data_useravatar" type="button"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <form name="form-useravatar" class="popup__form popup__form_data_useravatar" novalidate>
+          <input id="avatar" name="useravatar-avatar" type="url" required placeholder="Ссылка на аватар" minlength="5" class="popup__form-field popup__form-field_data_avatar">
+          <span class="popup__form-warning popup__form-warning_field_avatar">Вы пропустили это поле.</span>
+          <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_useravatar">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
     <div class="popup popup_addcard">
       <div class="popup__container">
         <button class="popup__close-button popup__close-button_data_addcard" type="button"></button>
@@ -68,6 +83,17 @@
           <input id="link" name="addcard-card-image" type="url" required placeholder="Ссылка на картинку" class="popup__form-field popup__form-field_data_card-image">
           <span class="popup__form-warning popup__form-warning_field_link">Вы пропустили это поле.</span>
           <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_addcard">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_confirmdelete">
+      <div class="popup__container">
+        <button class="popup__close-button popup__close-button_data_confirmdelete" type="button"></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+        <form name="form-confirmdelete" class="popup__form popup__form_data_confirmdelete" novalidate>
+          <input id="deleted" name="confirmdelete-deleted" type="hidden" required>
+          <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_confirmdelete">Да</button>
         </form>
       </div>
     </div>
@@ -85,11 +111,14 @@
   <template id="card">
     <li class="gallery__item">
       <div class="gallery__square-photo-wrapper">
-        <img src="<%=require('./images/photos/elbrus.jpg')%>" alt="Эльбрус" class="gallery__photo">
+        <img src="./images/photos/elbrus.jpg" alt="Эльбрус" class="gallery__photo">
         <button class="gallery__remove-button" type="button"></button>
       </div>
       <h2 class="gallery__title"></h2>
-      <button class="gallery__like-button" type="button"></button>
+      <div class="gallery__like">
+        <button class="gallery__like-button" type="button"></button>
+        <p class="gallery__like-count">3</p>
+      </div>
     </li>
   </template>
 
