--- a/index.html
+++ b/index.html
@@ -1,100 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./pages/index.css">
-  <link rel="icon" href="./favicon.ico">
-  <title>Сервис «Место»</title>
-  <meta name="description" content="Сайт с фотографиями разных мест от разных людей">
-  <!-- Добавил в html стиль, чтобы при первоначальной загрузке страницы не «мигали» заготовки попапов -->
-  <style>
-    .popup {
-      visibility: hidden;
-      opacity: 0;
-    }
-  </style>
-</head>
-<body class="body">
-  <div class="page">
-
-    <header class="header">
-      <img class="header__logo" src="./images/mesto-logo.svg" alt="Логотип сервиса Mesto" >
-    </header>
-
-    <main class="main">
-
-      <section class="profile">
-        <img src="./images/userpic.jpg" alt="Аватарка" class="profile__userpic">
-        <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button" type="button"></button>
-          <p class="profile__status">Исследователь океана</p>
-        </div>
-        <button class="profile__add-button" type="button"></button>
-      </section>
-
-      <section class="cards">
-        <ul class="gallery">
-        </ul>
-      </section>
-
-    </main>
-
-    <footer class="footer">
-      <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
-    </footer>
-
-    <div class="popup popup_userinfo">
-      <div class="popup__container">
-        <button class="popup__close-button popup__close-button_data_userinfo" type="button"></button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <form name="form-userinfo" class="popup__form popup__form_data_userinfo" novalidate>
-          <input id="name" name="userinfo-name" type="text" required placeholder="Имя" minlength="2" maxlength="40" class="popup__form-field popup__form-field_data_name">
-          <span class="popup__form-warning popup__form-warning_field_name">Вы пропустили это поле.</span>
-          <input id="status" name="userinfo-status" type="text" required placeholder="О себе" minlength="2" maxlength="200" class="popup__form-field popup__form-field_data_status">
-          <span class="popup__form-warning popup__form-warning_field_status">Вы пропустили это поле.</span>
-          <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_userinfo">Сохранить</button>
-        </form>
-      </div>
-    </div>
-
-    <div class="popup popup_addcard">
-      <div class="popup__container">
-        <button class="popup__close-button popup__close-button_data_addcard" type="button"></button>
-        <h2 class="popup__title">Новое место</h2>
-        <form name="form-addcard" class="popup__form popup__form_data_addcard" novalidate>
-          <input id="title" name="addcard-card-title" type="text" required placeholder="Название" minlength="2" maxlength="30" class="popup__form-field popup__form-field_data_card-title">
-          <span class="popup__form-warning popup__form-warning_field_title">Вы пропустили это поле.</span>
-          <input id="link" name="addcard-card-image" type="url" required placeholder="Ссылка на картинку" class="popup__form-field popup__form-field_data_card-image">
-          <span class="popup__form-warning popup__form-warning_field_link">Вы пропустили это поле.</span>
-          <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_addcard">Сохранить</button>
-        </form>
-      </div>
-    </div>
-
-    <div class="popup popup_photo">
-      <div class="popup__container popup__container_photo">
-        <button class="popup__close-button popup__close-button_data_big-image" type="button"></button>
-        <img class="popup__big-image-photo" src="./images/photos/elbrus.jpg" alt="Эльбрус">
-        <p class="popup__big-image-title">Эльбрус</p>
-      </div>
-    </div>
-
-  </div>
-
-  <template id="card">
-    <li class="gallery__item">
-      <div class="gallery__square-photo-wrapper">
-        <img src="./images/photos/elbrus.jpg" alt="Эльбрус" class="gallery__photo">
-        <button class="gallery__remove-button" type="button"></button>
-      </div>
-      <h2 class="gallery__title"></h2>
-      <button class="gallery__like-button" type="button"></button>
-    </li>
-  </template>
-
-  <script type="module" src="./scripts/index.js"></script>
-
-</body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="99893a4c4a2d0881dfbd.ico"><title>Сервис «Место»</title><meta name="description" content="Сайт с фотографиями разных мест от разных людей"><style>.popup{visibility:hidden;opacity:0}</style><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body class="body"><div class="page"><header class="header"><img class="header__logo" src="76ab65f6b681aeb97084.svg" alt="Логотип сервиса Mesto"></header><main class="main"><section class="profile"><div class="profile__avatar"><button class="profile__editpic"></button> <img class="profile__userpic" src="ae77fa4a27e4b1b0fc75.jpg" alt="Аватарка" class=""></div><div class="profile__info"><h1 class="profile__name">Жак-Ив Кусто</h1><button class="profile__edit-button" type="button"></button><p class="profile__status">Исследователь океана</p></div><button class="profile__add-button" type="button"></button></section><section class="cards"><ul class="gallery"></ul></section></main><footer class="footer"><p class="footer__copyright">&copy; 2022 Mesto Russia</p></footer><div class="popup popup_userinfo"><div class="popup__container"><button class="popup__close-button popup__close-button_data_userinfo" type="button"></button><h2 class="popup__title">Редактировать профиль</h2><form name="form-userinfo" class="popup__form popup__form_data_userinfo" novalidate><input id="name" name="userinfo-name" required placeholder="Имя" minlength="2" maxlength="40" class="popup__form-field popup__form-field_data_name"> <span class="popup__form-warning popup__form-warning_field_name">Вы пропустили это поле.</span> <input id="status" name="userinfo-status" required placeholder="О себе" minlength="2" maxlength="200" class="popup__form-field popup__form-field_data_status"> <span class="popup__form-warning popup__form-warning_field_status">Вы пропустили это поле.</span> <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_userinfo">Сохранить</button></form></div></div><div class="popup popup_useravatar"><div class="popup__container"><button class="popup__close-button popup__close-button_data_useravatar" type="button"></button><h2 class="popup__title">Обновить аватар</h2><form name="form-useravatar" class="popup__form popup__form_data_useravatar" novalidate><input id="avatar" name="useravatar-avatar" type="url" required placeholder="Ссылка на аватар" minlength="5" class="popup__form-field popup__form-field_data_avatar"> <span class="popup__form-warning popup__form-warning_field_avatar">Вы пропустили это поле.</span> <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_useravatar">Сохранить</button></form></div></div><div class="popup popup_addcard"><div class="popup__container"><button class="popup__close-button popup__close-button_data_addcard" type="button"></button><h2 class="popup__title">Новое место</h2><form name="form-addcard" class="popup__form popup__form_data_addcard" novalidate><input id="title" name="addcard-card-title" required placeholder="Название" minlength="2" maxlength="30" class="popup__form-field popup__form-field_data_card-title"> <span class="popup__form-warning popup__form-warning_field_title">Вы пропустили это поле.</span> <input id="link" name="addcard-card-image" type="url" required placeholder="Ссылка на картинку" class="popup__form-field popup__form-field_data_card-image"> <span class="popup__form-warning popup__form-warning_field_link">Вы пропустили это поле.</span> <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_addcard">Сохранить</button></form></div></div><div class="popup popup_confirmdelete"><div class="popup__container"><button class="popup__close-button popup__close-button_data_confirmdelete" type="button"></button><h2 class="popup__title">Вы уверены?</h2><form name="form-confirmdelete" class="popup__form popup__form_data_confirmdelete" novalidate><input id="deleted" name="confirmdelete-deleted" type="hidden" required> <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_confirmdelete">Да</button></form></div></div><div class="popup popup_photo"><div class="popup__container popup__container_photo"><button class="popup__close-button popup__close-button_data_big-image" type="button"></button> <img class="popup__big-image-photo" src="5dc472d79b73ec611311.jpg" alt="Эльбрус"><p class="popup__big-image-title">Эльбрус</p></div></div></div><template id="card"><li class="gallery__item"><div class="gallery__square-photo-wrapper"><img src="5dc472d79b73ec611311.jpg" alt="Эльбрус" class="gallery__photo"> <button class="gallery__remove-button" type="button"></button></div><h2 class="gallery__title"></h2><div class="gallery__like"><button class="gallery__like-button" type="button"></button><p class="gallery__like-count">3</p></div></li></template></body></html>
