feature: сделать работу с api

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         <button class="popup__close-button popup__close-button_data_confirmdelete" type="button"></button>
         <h2 class="popup__title">Вы уверены?</h2>
         <form name="form-confirmdelete" class="popup__form popup__form_data_confirmdelete" novalidate>
-          <input id="deleted" name="confirmdelete-deleted" type="hidden" required>
+          <input id="deleted" name="confirmdelete-deleted" type="hidden" required class="popup__form-field">
           <button type="submit" class="popup__form-submit-button popup__form-submit-button_data_confirmdelete">Да</button>
         </form>
       </div>
