--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <section class="profile">
         <div class="profile__avatar">
           <button class="profile__editpic"></button>
-          <img class="profile__userpic" src="./images/userpic.jpg" alt="Аватарка" class="">
+          <img class="profile__userpic" src="./images/userpic.jpg" alt="Аватарка">
         </div>
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
